Some details improved in the code.